fine header-top

--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <div id="header-top" class="container-fluid bg-black text-end p-2">
+            <a id="logo-sony" href="https://www.sony.it" title="www.sony.it">
+                <img src="./img/sony_logo.svg" alt="Sony logo">
+            </a>
+        </div>
+    </header>
+
+    <!-- main -->
+    <main>
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
 
 
     <!-- Bootstrap script -->
