fix cards e favicon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Personal css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="./img/ps-logo-favicon.png">
 </head>
 
 <body>
@@ -380,27 +382,30 @@
                 </div>
             </div>
             <!-- cards -->
-            <div class="row row-cols-2 g-0 row-cols-sm-3 row-cols-lg-6">
-                <div class="ms_jumbo-card col">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
-                </div>
-                <div class="ms_jumbo-card col">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
-                </div>
-                <div class="ms_jumbo-card col">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
-                </div>
-                <div class="ms_jumbo-card col">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
-                </div>
-                <div class="ms_jumbo-card col">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
-                </div>
-                <div class="ms_jumbo-card col">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
+            <div class="container">
+                <div class="row row-cols-2 g-4 g-sm-3 row-cols-sm-3 row-cols-lg-6">
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
+                    </div>
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
+                    </div>
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
+                    </div>
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
+                    </div>
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
+                    </div>
+                    <div class="ms_jumbo-card col">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- PlayStation 5 -->
     </main>
 
     <!-- footer -->
