--- a/index.html
+++ b/index.html
@@ -376,7 +376,9 @@
                         <div class="col-12 col-lg-4 col-xl-3">
                             <h3 class="ms_h3 my-4">Rompi il cerchio</h3>
                             <p class="ms_p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
-                            <button class="btn text-white ms_btn-round">Acquista ora</button>
+                            <div class="ms_btn">
+                                <button class="btn text-white ms_btn-round">Acquista ora</button>
+                            </div>
                         </div>
                     </div>
                 </div>
