fine sezione ps5 con card scroll in responsive

--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <div class="container-fluid px-0">
                     <!-- logo -->
-                    <a class="navbar-brand order-3 ps-lg-3 order-lg-0 me-0 me-lg-3 text-center" href="index.html" title="Home">
+                    <a class="navbar-brand order-3 ps-lg-3 order-lg-0 me-0 me-lg-3 text-center" href="index.html"
+                        title="Home">
                         <img src="./img/play_logo.svg" alt="PlayStation logo">
                     </a>
                     <!-- menu e ricerca -->
                     <div class="order-0 order-lg-3 d-flex align-items-center px-3 flex-grow-1 flex-lg-grow-0">
                         <!-- menu -->
-                        <button id="menu-btn" class="navbar-toggler border-0 me-3 p-0" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                        <button id="menu-btn" class="navbar-toggler border-0 me-3 p-0" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="bi bi-list"></i>
                             <!-- <i class="bi bi-x"></i> -->
                         </button>
@@ -63,14 +64,15 @@
                             <!-- navbar item -->
                             <li class="nav-item d-flex">
                                 <button class="ms_nav-toggle" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown"aria-expanded="false">
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Giochi
                                 </button>
                                 <!-- dropdown menu -->
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -137,7 +139,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -189,7 +192,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -216,7 +220,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -250,7 +255,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -296,7 +302,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -324,7 +331,8 @@
                                 <div class="dropdown-menu w-100 ms_dropdown mt-0" aria-labelledby="navbarDropdown">
                                     <div class="ms_menu">
                                         <!-- dropdown top -->
-                                        <ul class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
+                                        <ul
+                                            class="container-lg d-flex flex-wrap justify-content-center mb-3 dropdown-top">
                                             <li class="ms_dropdown-item">
                                                 <a href="#">
                                                     <img src="./img/play-menu-ico.png" alt="PlayStation 5 icon">
@@ -363,7 +371,7 @@
     <!-- main -->
     <main>
         <!-- jumbotron -->
-        <div id="jumbotron">
+        <div id="jumbotron" class="pb-5">
             <!-- contenuto -->
             <div class="ms_bg-jumbo">
                 <div class="ms_jumbo-content container text-white">
@@ -373,9 +381,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-lg-4 col-xl-3">
-                            <h3 class="ms_h3 my-4">Rompi il cerchio</h3>
-                            <p class="ms_p">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                        <div class="col-12 col-lg-4">
+                            <h3 class="ms_h3 my-4 fw-lighter">Rompi il cerchio</h3>
+                            <p class="fw-light">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni
+                                rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su
+                                PS5.</p>
                             <div class="ms_btn">
                                 <button class="btn text-white ms_btn-round">Acquista ora</button>
                             </div>
@@ -408,6 +418,57 @@
             </div>
         </div>
         <!-- PlayStation 5 -->
+        <section id="ps5" class="container-md py-3">
+            <!-- titolo sezione -->
+            <div class="ms_section-title text-center ">
+                <h4 class="text-uppercase ms_h4 fw-light">Play has no limits</h4>
+                <h2 class="ms_h2 fw-lighter">Ecco la PlayStation 5</h2>
+                <p class="fw-light">
+                    Scopri nuove possibilità di gioco che non avresti mai immaginato
+                </p>
+            </div>
+            <!-- contenuto -->
+            <!-- selected item -->
+            <div class="row">
+                <div class="col-12 col-md-7 order-md-1">
+                    <img class="w-100" src="./img/playstation-5-thumb.png" alt="PlayStation 5 console">
+                </div>
+                <div class="col-12 col-md-5 text-center text-md-start align-self-center">
+                    <h3 class="ms_h3 fw-lighter">Console PlayStation 5</h3>
+                    <p class="fw-light">
+                        Sperimenta la nuova generazione di incredibili giochi PlayStation.
+                    </p>
+                    <div class="ms_btn">
+                        <button class="btn text-white ms_btn-round">
+                            Maggiori informazioni
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- gallery -->
+            <div class="ms_gallery">
+                <div class="ms_card">
+                    <img class="w-100" src="./img/playstation-5-thumb.png" alt="PlayStation 5 info">
+                    <h6 class="d-none d-md-block fw-normal">Console PS5</h6>
+                </div>
+                <div class="ms_card">
+                    <img class="w-100" src="./img/joypad-thumb.png" alt="Controller PlayStation 5 info">
+                    <h6 class="d-none d-md-block fw-normal">Controller wireless DualSense&trade;</h6>
+                </div>
+                <div class="ms_card">
+                    <img class="w-100" src="./img/headset-thumb.png" alt="Headset PlayStation 5 info">
+                    <h6 class="d-none d-md-block fw-normal">Cuffie wireless con microfono PULSE&trade;</h6>
+                </div>
+                <div class="ms_card">
+                    <img class="w-100" src="./img/remote-thumb.png" alt="Remote PlayStation 5 info">
+                    <h6 class="d-none d-md-block fw-normal">Telecomando Media</h6>
+                </div>
+                <div class="ms_card">
+                    <img class="w-100" src="./img/camera-thumb.jpg" alt="Camera PlayStation 5 info">
+                    <h6 class="d-none d-md-block fw-normal">Telecamera HD</h6>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
