--- a/index.html
+++ b/index.html
@@ -373,21 +373,23 @@
         <!-- jumbotron -->
         <div id="jumbotron" class="pb-5">
             <!-- contenuto -->
-            <div class="ms_bg-jumbo">
-                <div class="ms_jumbo-content container text-white">
-                    <div class="row">
-                        <div class="col-7 col-lg-3">
-                            <img class="w-100" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
+            <div class="ms_big-bg-image">
+                <div class="ms_gradient">
+                    <div class="container text-white">
+                        <div class="row">
+                            <div class="col-7 col-lg-3">
+                                <img class="w-100" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 col-lg-4">
-                            <h3 class="ms_h3 my-4 fw-lighter">Rompi il cerchio</h3>
-                            <p class="fw-light">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni
-                                rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su
-                                PS5.</p>
-                            <div class="ms_btn">
-                                <button class="btn text-white ms_btn-round">Acquista ora</button>
+                        <div class="row">
+                            <div class="col-12 col-lg-4">
+                                <h3 class="ms_h3 my-4 fw-lighter">Rompi il cerchio</h3>
+                                <p class="fw-light">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni
+                                    rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su
+                                    PS5.</p>
+                                <div class="ms_btn">
+                                    <button class="btn text-white ms_btn-round">Acquista ora</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -466,6 +468,30 @@
                 <div class="ms_card">
                     <img class="w-100" src="./img/camera-thumb.jpg" alt="Camera PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Telecamera HD</h6>
+                </div>
+            </div>
+        </section>
+        <!-- game adv -->
+        <section id="game-adv" class="mt-3 ms_big-bg-image">
+            <!-- contenuto -->
+            <div class="ms_gradient">
+                <div class="container text-white">
+                    <div class="row">
+                        <div class="col-7 col-sm-5 col-lg-3">
+                            <img class="w-100" src="./img/it-takes-two-logo.png" alt="It Takes Two logo">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-10 col-lg-6">
+                            <h3 class="ms_h3 my-4 fw-lighter">Un'avventura cooperativa selvaggia ti attende</h3>
+                            <p class="fw-light">
+                                Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
+                            </p>
+                            <div class="ms_btn">
+                                <button class="btn text-white ms_btn-round">Acquista ora</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
