fine sezione nuove uscite

--- a/index.html
+++ b/index.html
@@ -398,22 +398,22 @@
             <!-- cards -->
             <div class="container">
                 <div class="row row-cols-2 g-4 g-sm-3 row-cols-sm-3 row-cols-lg-6">
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
                     </div>
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
                     </div>
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
                     </div>
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
                     </div>
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal card">
                     </div>
-                    <div class="ms_jumbo-card col">
+                    <div class="ms_card col">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank card">
                     </div>
                 </div>
@@ -450,23 +450,23 @@
             <!-- gallery -->
             <div class="ms_gallery">
                 <div class="ms_card">
-                    <img class="w-100" src="./img/playstation-5-thumb.png" alt="PlayStation 5 info">
+                    <img src="./img/playstation-5-thumb.png" alt="PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Console PS5</h6>
                 </div>
                 <div class="ms_card">
-                    <img class="w-100" src="./img/joypad-thumb.png" alt="Controller PlayStation 5 info">
+                    <img src="./img/joypad-thumb.png" alt="Controller PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Controller wireless DualSense&trade;</h6>
                 </div>
                 <div class="ms_card">
-                    <img class="w-100" src="./img/headset-thumb.png" alt="Headset PlayStation 5 info">
+                    <img src="./img/headset-thumb.png" alt="Headset PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Cuffie wireless con microfono PULSE&trade;</h6>
                 </div>
                 <div class="ms_card">
-                    <img class="w-100" src="./img/remote-thumb.png" alt="Remote PlayStation 5 info">
+                    <img src="./img/remote-thumb.png" alt="Remote PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Telecomando Media</h6>
                 </div>
                 <div class="ms_card">
-                    <img class="w-100" src="./img/camera-thumb.jpg" alt="Camera PlayStation 5 info">
+                    <img src="./img/camera-thumb.jpg" alt="Camera PlayStation 5 info">
                     <h6 class="d-none d-md-block fw-normal">Telecamera HD</h6>
                 </div>
             </div>
@@ -477,12 +477,12 @@
             <div class="ms_gradient">
                 <div class="container text-white">
                     <div class="row">
-                        <div class="col-7 col-sm-5 col-lg-3">
+                        <div class="col-6 col-sm-5 col-lg-3">
                             <img class="w-100" src="./img/it-takes-two-logo.png" alt="It Takes Two logo">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-10 col-lg-6">
+                        <div class="col-12 col-md-10 col-lg-5">
                             <h3 class="ms_h3 my-4 fw-lighter">Un'avventura cooperativa selvaggia ti attende</h3>
                             <p class="fw-light">
                                 Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
@@ -491,6 +491,69 @@
                                 <button class="btn text-white ms_btn-round">Acquista ora</button>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- nuove uscite -->
+        <section id="new-games" class="py-5 text-white">
+            <!-- titolo sezione -->
+            <div class="ms_section-title container">
+                <h4 class="fw-normal fs-5">Nuove uscite</h4>
+                <p class="fw-light">
+                    Giochi incredibili per PS4 e PS5 disponibili ora
+                </p>
+            </div>
+            <!-- cards -->
+            <div class="container">
+                <div class="row row-cols-2 g-4 g-sm-3 row-cols-sm-3 row-cols-lg-6">
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk card">
+                        <h6 class="fw-light mt-2">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</h6>
+                    </div>
+                    <div class="ms_card col">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot card">
+                        <h6 class="fw-light mt-2">Crash Bandicoot 4: It's About Time</h6>
                     </div>
                 </div>
             </div>
