fix formattazione testi

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-lg-4">
-                                <h3 class="ms_h3 my-4 fw-lighter">Rompi il cerchio</h3>
+                                <h3 class="ms_h3 my-4">Rompi il cerchio</h3>
                                 <p class="fw-light">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni
                                     rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su
                                     PS5.</p>
@@ -423,9 +423,9 @@
         <section id="ps5" class="container-md py-3">
             <!-- titolo sezione -->
             <div class="ms_section-title text-center ">
-                <h4 class="text-uppercase ms_h4 fw-light">Play has no limits</h4>
-                <h2 class="ms_h2 fw-lighter">Ecco la PlayStation 5</h2>
-                <p class="fw-light">
+                <h4 class="text-uppercase ms_h4 fw-light fs-5">Play has no limits</h4>
+                <h2 class="ms_h2">Ecco la PlayStation 5</h2>
+                <p class="fw-light fs-5">
                     Scopri nuove possibilità di gioco che non avresti mai immaginato
                 </p>
             </div>
@@ -436,8 +436,8 @@
                     <img class="w-100" src="./img/playstation-5-thumb.png" alt="PlayStation 5 console">
                 </div>
                 <div class="col-12 col-md-5 text-center text-md-start align-self-center">
-                    <h3 class="ms_h3 fw-lighter">Console PlayStation 5</h3>
-                    <p class="fw-light">
+                    <h3 class="ms_h3">Console PlayStation 5</h3>
+                    <p class="fw-light fs-5">
                         Sperimenta la nuova generazione di incredibili giochi PlayStation.
                     </p>
                     <div class="ms_btn">
@@ -483,7 +483,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-10 col-lg-5">
-                            <h3 class="ms_h3 my-4 fw-lighter">Un'avventura cooperativa selvaggia ti attende</h3>
+                            <h3 class="ms_h3 my-4">Un'avventura cooperativa selvaggia ti attende</h3>
                             <p class="fw-light">
                                 Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
                             </p>
