--- a/index.html
+++ b/index.html
@@ -558,6 +558,61 @@
                 </div>
             </div>
         </section>
+        <!-- PlayStation 4 -->
+        <section id="ps4" class="container-md pt-5">
+            <!-- titolo sezione -->
+            <div class="ms_section-title text-center ">
+                <h2 class="ms_h2">Esplora PlayStation&reg;4</h2>
+                <p class="fw-light fs-5">
+                    Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.
+                </p>
+            </div>
+            <!-- contenuto -->
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col mb-5">
+                    <img src="./img/ps4-slim-homepage-image-block.jpg" alt="PlayStation 4 console">
+                    <h3 class="ms_h3">
+                        PlayStation 4
+                    </h3>
+                    <p>
+                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.
+                    </p>
+                    <div class="ms_btn">
+                        <button class="btn ms_btn-round text-white">
+                            Scopri di più
+                        </button>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <img src="./img/double11-202010-tw-psvr.jpg" alt="PlayStation VR">
+                    <h3 class="ms_h3">
+                        PlayStation VR
+                    </h3>
+                    <p>
+                        Oltre 500 titoli ed esperienze di gioco.<br>Scoprili tutti.
+                    </p>
+                    <div class="ms_btn">
+                        <button class="btn ms_btn-round text-white">
+                            Scopri di più
+                        </button>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <img src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                    <h3 class="ms_h3">
+                        Accessori
+                    </h3>
+                    <p>
+                        Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
+                    </p>
+                    <div class="ms_btn">
+                        <button class="btn ms_btn-round text-white">
+                            Scopri di più
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
