--- a/index.html
+++ b/index.html
@@ -613,6 +613,25 @@
                 </div>
             </div>
         </section>
+        <!-- playstation plus -->
+        <section id="psplus">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-12 col-md-5 py-4 align-self-center">
+                        <img class="w-75" src="./img/ps-plus-logo.png" alt="PlayStation Plus logo">
+                        <p>
+                            Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.
+                        </p>
+                        <div class="ms_btn">
+                            <button class="btn ms_btn-round">Esplora PlayStation Plus</button>
+                        </div>
+                    </div>
+                    <div class="offset-md-1 col-md-6 d-none d-md-block">
+                        <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
