fine sezione sconti

--- a/index.html
+++ b/index.html
@@ -626,9 +626,31 @@
                             <button class="btn ms_btn-round">Esplora PlayStation Plus</button>
                         </div>
                     </div>
-                    <div class="offset-md-1 col-md-6 d-none d-md-block">
+                    <div class="col-md-7 offset-lg-1 col-lg-6 d-none d-md-block">
                         <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- sconti -->
+        <section id="deals" class="container-md py-5">
+            <!-- titolo sezione -->
+            <div class="ms_section-title text-center ">
+                <h2 class="ms_h2">Nuovi sconti sul PlayStation Store</h2>
+                <p class="fw-light fs-5">
+                    Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                </p>
+            </div>
+            <!-- contenuto -->
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <img class="w-100 rounded-3" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Games under 20">
+                </div>
+                <div class="col">
+                    <img class="w-100 rounded-3" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Golden week">
+                </div>
+                <div class="col">
+                    <img class="w-100 rounded-3" src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to play">
                 </div>
             </div>
         </section>
