--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 offset-lg-1 col-lg-6 d-none d-md-block">
-                        <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        <img class="w-100" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="PlayStation Plus april">
                     </div>
                 </div>
             </div>
@@ -651,6 +651,25 @@
                 </div>
                 <div class="col">
                     <img class="w-100 rounded-3" src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to play">
+                </div>
+            </div>
+        </section>
+        <!-- playstation now -->
+        <section id="psnow">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-12 col-md-5 py-4 align-self-center">
+                        <img class="w-75" src="./img/ps-now-logo-two-column.png" alt="PlayStation Now logo">
+                        <p>
+                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </p>
+                        <div class="ms_btn">
+                            <button class="btn ms_btn-round">Esplora PlayStation now</button>
+                        </div>
+                    </div>
+                    <div class="col-md-7 offset-lg-1 col-lg-6 d-none d-md-block">
+                        <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="PlayStation Now april">
+                    </div>
                 </div>
             </div>
         </section>
