--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@
             <!-- contenuto -->
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <img class="w-100 rounded-3" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Games under 20">
+                    <img class="w-100" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Games under 20">
                 </div>
                 <div class="col">
-                    <img class="w-100 rounded-3" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Golden week">
+                    <img class="w-100" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Golden week">
                 </div>
                 <div class="col">
-                    <img class="w-100 rounded-3" src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to play">
+                    <img class="w-100" src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to play">
                 </div>
             </div>
         </section>
@@ -670,6 +670,28 @@
                     <div class="col-md-7 offset-lg-1 col-lg-6 d-none d-md-block">
                         <img class="w-100" src="./img/ps-now-april-featured-image-block.png" alt="PlayStation Now april">
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- social -->
+        <section id="social" class="container-md py-5 mb-5">
+            <!-- titolo sezione -->
+            <div class="ms_section-title text-center pb-5">
+                <h2 class="ms_h2">Seguici sui social media</h2>
+            </div>
+            <!-- contenuto -->
+            <div class="row g-4">
+                <div class="col-6 col-sm-3 offset-md-2 col-md-2">
+                    <img class="w-100" src="./img/twitter.jpg" alt="Twitter logo">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2">
+                    <img class="w-100" src="./img/facebook.jpg" alt="Facebook logo">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2">
+                    <img class="w-100" src="./img/instagram.jpg" alt="Instagram logo">
+                </div>
+                <div class="col-6 col-sm-3 col-md-2">
+                    <img class="w-100" src="./img/youtube.png" alt="YouTube logo">
                 </div>
             </div>
         </section>
