--- a/index.html
+++ b/index.html
@@ -698,8 +698,96 @@
     </main>
 
     <!-- footer -->
-    <footer>
-
+    <footer class="py-5 text-white">
+        <div class="container-md">
+            <!-- footer top -->
+            <div id="footer-top" class="row">
+                <!-- language -->
+                <div class="col-12 col-md-6 d-flex flex-column align-items-start">
+                    <img src="./img/ps-footer.svg" alt="PlayStation logo white">
+                    <div id="language" class="my-4 d-inline-block">
+                        <img src="./img/language-globe.svg" alt="Language globe icon">
+                        <span>Country / Region: Italy</span>
+                    </div>
+                </div>
+                <!-- links -->
+                <div class="col-12 col-md-2">
+                    <ul>
+                        <li>
+                            <a href="#">Suopporto</a>
+                        </li>
+                        <li>
+                            <a href="#">Informativa sulla privacy e sui cookie</a>
+                        </li>
+                        <li>
+                            <a href="#">Termini di utilizzo del sito Web</a>
+                        </li>
+                        <li>
+                            <a href="#">PlayStation Studios</a>
+                        </li>
+                        <li>
+                            <a href="#">Termini legali</a>
+                        </li>
+                        <li>
+                            <a href="#">Chi siamo</a>
+                        </li>
+                        <li>
+                            <a href="#">PlayStation e l'ambiente</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-2">
+                    <ul>
+                        <li>
+                            <a href="#">Termini di servizio di PSN</a>
+                        </li>
+                        <li>
+                            <a href="#">Termini di annullamento del PS Store</a>
+                        </li>
+                        <li>
+                            <a href="#">Avvertenze per la salute</a>
+                        </li>
+                        <li>
+                            <a href="#">Classificazioni per età</a>
+                        </li>
+                        <li>
+                            <a href="#">Termini d'uso del Software</a>
+                        </li>
+                        <li>
+                            <a href="#">Lavora con PlayStation</a>
+                        </li>
+                        <li>
+                            <a href="#">Mappa del sito</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-2">
+                    <ul>
+                        <li>
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li>
+                            <a href="#">Twitter</a>
+                        </li>
+                        <li>
+                            <a href="#">YouTube</a>
+                        </li>
+                        <li>
+                            <a href="#">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- footer bottom -->
+            <div id="footer-bottom" class="row">
+                <div class="col-12 col-md-6">
+                    <img class="mb-3" src="./img/sie-logo.svg" alt="Sony Interactive Entertainment logo">
+                    <p>
+                        Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
