Animazione icona menu responsive con un bug

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                         <button id="menu-btn" class="navbar-toggler border-0 me-3 p-0" type="button"
                             data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <i class="bi bi-list"></i>
-                            <!-- <i class="bi bi-x"></i> -->
+                            <!-- icona menu formata da 3 span -->
+                            <span class="ms_menu-icon"></span>
+                            <span class="ms_menu-icon"></span>
+                            <span class="ms_menu-icon"></span>
                         </button>
                         <!-- ricerca -->
                         <div id="search-btn" class="text-center">
