--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
             <div class="ms_big-bg-image">
                 <div class="ms_gradient">
                     <div class="container text-white">
-                        <div class="row">
+                        <div class="row ms_moving-logo">
                             <div class="col-7 col-lg-3">
                                 <img class="w-100" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row ms_moving-text">
                             <div class="col-12 col-lg-4">
                                 <h3 class="ms_h3 my-4">Rompi il cerchio</h3>
                                 <p class="fw-light">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni
@@ -478,12 +478,12 @@
             <!-- contenuto -->
             <div class="ms_gradient">
                 <div class="container text-white">
-                    <div class="row">
+                    <div class="row ms_moving-logo">
                         <div class="col-6 col-sm-5 col-lg-3">
                             <img class="w-100" src="./img/it-takes-two-logo.png" alt="It Takes Two logo">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row ms_moving-text">
                         <div class="col-12 col-md-10 col-lg-5">
                             <h3 class="ms_h3 my-4">Un'avventura cooperativa selvaggia ti attende</h3>
                             <p class="fw-light">
