fix bug icona menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- menu e ricerca -->
                     <div class="order-0 order-lg-3 d-flex align-items-center px-3 flex-grow-1 flex-lg-grow-0">
                         <!-- menu -->
-                        <button id="menu-btn" class="navbar-toggler border-0 me-3 p-0" type="button"
+                        <button id="menu-btn" class="navbar-toggler collapsed border-0 me-3 p-0" type="button"
                             data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <!-- icona menu formata da 3 span -->
